# expectoassertum

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.c
example/asserttest/: assert_bool.c  assert_double.c  assert_int.c  assert_ptr.c  assert_str.c  assert_uint.c  asserttest.h
example/grouplifecycle/: grouplifecycle.c  grouplifecycle.h
include/: expectoassertum.h
src/: expectoassertum.c
